--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.1",
+    "django-cors-headers>=4.7.0",
     "djangorestframework>=3.16.0",
 ]
